--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <script   src="https://cdnjs.cloudflare.com/ajax/libs/immutable/3.8.2/immutable.js" integrity="sha256-/2QRv/wHzmPJLRB351+bVXYjGU2Tk/bLfOt8XiVcmAg=" crossorigin="anonymous"></script>
+    <title>Mars Rover Dashboard</title>
+    <link rel="stylesheet" href="./assets/stylesheets/index.css">
+    
 </head>
 
 <body>
@@ -16,6 +17,7 @@
         </div>
     </main>
 </body>
+<script   src="https://cdnjs.cloudflare.com/ajax/libs/immutable/3.8.2/immutable.js" integrity="sha256-/2QRv/wHzmPJLRB351+bVXYjGU2Tk/bLfOt8XiVcmAg=" crossorigin="anonymous"></script>
 <script src="/client.js"></script>
 
 </html>
