docs: Added comments

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mars Rover Dashboard</title>
+    <meta name="description" content="See Mars photos taken by three Mars rovers - Curiosity, Opportunity and Spirit. Web app using NASA API, built in Javascript.">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/stylesheets/index.css">
@@ -19,7 +20,7 @@
         </div>
     </main>
 </body>
-<script   src="https://cdnjs.cloudflare.com/ajax/libs/immutable/3.8.2/immutable.js" integrity="sha256-/2QRv/wHzmPJLRB351+bVXYjGU2Tk/bLfOt8XiVcmAg=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/immutable/3.8.2/immutable.js" integrity="sha256-/2QRv/wHzmPJLRB351+bVXYjGU2Tk/bLfOt8XiVcmAg=" crossorigin="anonymous"></script>
 <script src="/client.js"></script>
 
 </html>
